# UnnamedGame

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Items.json  README.md  gcovr.cfg
.github/badges/: coverage-badge.json
.github/workflows/: cmake-multi-platform.yml  coverage.yml
cmake/: CodeCoverage.cmake
documentation/: UbiquitousLanguage.typ
documentation/src-gen/: Game_ContextMap.gv
documentation/tacticalDesign/: Game.cml
resources/schemas/: Items.schema.json
resources/test/: InvalidSchemeItemFile.json  Items.json
scripts/: code_coverage_analysis.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/common/: Definitions.hpp  IEvent.hpp  IEventChannel.hpp  IItemRepository.hpp  ILogger.hpp  IPlayerInput.hpp
src/core/common/exceptions/: RepositoryException.hpp
src/core/gameLoop/: EventBus.hpp  GameLoop.cpp  GameLoop.hpp
src/core/gameLoop/events/: PlayerInputReceivedEvent.hpp
src/core/item/: IItemRepository.hpp  Item.cpp  Item.hpp
src/core/stats/: StatModifier.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/input/: KeyboardInputAdapter.cpp  KeyboardInputAdapter.hpp
src/infrastructure/logging/: SpdlogAdapter.cpp  SpdlogAdapter.hpp
src/infrastructure/persistence/: JsonItemRepository.cpp  JsonItemRepository.hpp
src/test/: CMakeLists.txt
src/test/core/gameLoop/: EventBusTest.cpp
src/test/core/item/: ItemRepositoryContractTest.cpp
src/test/infrastructure/persistence/: JsonItemRepositoryTest.cpp
